# skype-client

./: Pipfile  README.md  pyproject.toml
src/skype_client/: __init__.py  skype_utils.py
tests/: test_skype_utils.py
