[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skype_client"
version = "1.0.0"
authors = [
  { name="Jeff Hsu", email="adf159776@gmail.com" },
]
description = "SkypeClient"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "skpy >= 0.10.6"
]

[project.urls]
"Homepage" = "https://github.com/meetjeff/skype-client"